# perception3d

./: .gitignore  CMakeLists.txt  CMakeLists.txt.orig  CMakeLists.txt.orig.orig  LICENSE  README.md  README.md.orig  backupDatabase.sh  cleanDatabase.sh  database_object_description.txt  frames.gv  jaco_calibration.launch  main.launch  multipleKinects.launch  package.xml  package.xml.orig  vision.launch
artag/: ar_object  ar_object~
bagJaco/: .~lock.moveit_state_withWrap.csv#  moveit_state_invertionSigne.bag  moveit_state_invertionSigne.csv  moveit_state_withWrap.bag  moveit_state_withWrap.csv  moveit_state_withoutWrap.bag  moveit_state_withoutWrap.csv  pose.txt
bagJaco/data_2014_08_08_1/: j1_output.csv  j1_output_joint_angle.csv  j1_output_joint_velocity.csv  j2_output.csv  j2_output_joint_angle.csv  j2_output_joint_velocity.csv  j3_output.csv  j3_output_joint_angle.csv  j3_output_joint_velocity.csv  j4_output.csv  j4_output_joint_angle.csv  j4_output_joint_velocity.csv  j5_output.csv  j5_output_joint_angle.csv  j5_output_joint_velocity.csv  j6_output.csv  j6_output_joint_angle.csv  j6_output_joint_velocity.csv  joint1Delay.bag  joint2Delay.bag  joint3Delay.bag  joint4Delay.bag  joint5Delay.bag  joint6Delay.bag
bagJaco/data_2014_08_11_1/: j1_output_delay.csv  j1_output_joint_angle.csv  j1_output_joint_angle_vel_30_60.csv  j1_output_joint_angle_vel_5_20.csv  j1_output_joint_velocity.csv  j1_output_joint_velocity_vel_30_60.csv  j1_output_joint_velocity_vel_5_20.csv  j1_output_vel_30_60.csv  j1_output_vel_5_20.csv  joint1Delay0.bag  joint1Delay1.bag  joint1Delay2.bag  joint1Delay3.bag  joint1Velocity30_60.bag  joint1Velocity5_20.bag
dataSet_bd/cvfh/: 2.pcd  4.pcd
dataSet_bd/pointCloud/: 1.pcd  2.pcd  3.pcd  4.pcd
dataSet_bd/poseArm/: 1.txt
dataSet_bd/poseObject/: 1.txt  4.txt
dataSet_bd/transform/: 1.txt  2.txt  3.txt  4.txt
database/cvfh/: 1.pcd  2.pcd
database/pointCloud/: 1.pcd  2.pcd
database/poseArm/: 1.txt
database/poseObject/: 1.txt  2.txt
database/transform/: 1.txt  2.txt
gazebo_worlds/: table.world
gtest-1.7.0/: CMakeCache.txt  Makefile  cmake_install.cmake
gtest-1.7.0/make/: sample1_unittest
include/: communication.h  communication.h.orig  fileAPI.h  jaco_custom.h  jaco_custom.h.autosave  objectBd.h  objectExtractor.h  objectExtractor.h.autosave  objectExtractor.h.orig  object_recognition.h  object_recognition.h.orig  planSegmentor.h
launch/: ar_kinect.launch  data_publisher_joint_test.launch  gazebo.launch  jaco.launch  jaco_calibration.launch  kinect.launch  object_extraction.launch  perception.launch  plane_segmentation.launch  snapshot.launch  square_draw.launch  tfLaunch.launch  vision.launch  wpi_jaco_arm.launch
launch/moveitTest/: redoPose.launch  testLaunch.launch
screenshots/: 2.pcd  snapshot.pcd  test.pcd  test_kleenex_translation.pcd  test_kleenex_translation2.pcd  test_kleenex_translation3.pcd  test_kleenex_translation4.pcd  test_kleenex_translation5.pcd  test_kleenex_translation6.pcd  test_stapler.pcd  upsampling.pcd
src/: arm_action_server.cpp  arm_action_server.cpp.orig  connected_segmentation.cpp  data_publisher_joint_test.cpp  find_cloud.cpp  image_transport_node.cpp  moveit_jaco_listener.cpp  objectExtractor.cpp  objects_extraction.cpp  segmentation.cpp  snapshot.cpp  square_draw.cpp  tracking.cpp  tracking_with_normals.cpp  tracking_without_normals.cpp
src/communication/: communication.cpp  communication_node.cpp
src/jacoTests/: calibration.cpp  grasp.cpp  jaco_joint_states.cpp
src/moveitPlugin/: arm_action_server.cpp  moveit_jaco_listener.cpp  pointcloud_object_remover.cpp
src/moveitTest/: redoPose.cpp  terminalListener.cpp  testMoveit.cpp
src/nodes/: perception.cpp
src/perception/: communication.cpp  communication.cpp.autosave  communication.cpp.orig  fileAPI.cpp  fileAPI.cpp.orig  jaco_custom.cpp  objectBd.cpp  objectExtractor.cpp  objectExtractor.cpp.orig  object_recognition.cpp  object_recognition.cpp.autosave  object_recognition.cpp.orig  perception.cpp  perception.cpp.orig  teacher.cpp  testApi.cpp
src/segmentation/: mainProgram.cpp  planSegmentor.cpp
src/tests/: icp_test.cpp  moveJaco.cpp  moveJaco.cpp.autosave  multipleKinects.cpp  upsampling.cpp  view_surfaces.cpp
test/: testApi.cpp  testObjectBd.cpp
test/dataSet_bd/cvfh/: 3.pcd
test/dataSet_bd/transform/: 1.txt  2.txt  3.txt  4.txt
testBDJean/cvfh/: 10.pcd  11.pcd  12.pcd  13.pcd  14.pcd  15.pcd  16.pcd  17.pcd
testBDJean/pointCloud/: 10.pcd  11.pcd  12.pcd  13.pcd  14.pcd  15.pcd  16.pcd  17.pcd
testBDJean/poseArm/: 13.txt
